# metakeyaiv2

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  spell-reverse-text.py  tsconfig.json
.github/ISSUE_TEMPLATE/: open-question.md
apps/metakey-desktop/: forge.config.ts  package.json  webpack.renderer.config.ts
apps/metakey-desktop/scripts/: build-agent.mjs
apps/metakey-desktop/src/: AppStateManager.ts  index.css  index.html  index.ts  preload.ts  renderer.ts
apps/metakey-desktop/src/lib/: draggable.ts
apps/metakey-desktop/src/views/: BaseWidget.ts  MainHUDView.ts  NotificationsView.ts  SpellbookView.ts  StatsView.ts  index.ts
apps/metakey-desktop/stock-assets/hotkeys/: alternative.json  default.json
apps/metakey-desktop/stock-assets/spells/: hello.py  spell-to-lowercase.py
apps/metakey-desktop/stock-assets/themes/default/: theme.json  tokens.css
apps/metakey-desktop/stock-assets/themes/magical/: theme.json  tokens.css
docs/: feasibility-and-approach.md  firstrun-journey.md  implementation-status.md  latest-structure.md  normal-simple-journey.md  open-questions.md  overlay-architecture.md  roadmap.md  spec.md  theme-starter-kit.md  unified-state-refactoring.md
examples/spells/text-summarizer/: plugin.json  summarize.py
recipes/: ollama_setup.sh
renderer/: index.html
src/: clipboard-manager.ts  main-simple.ts  main.ts  provider-manager.ts  runtime-manager.ts  spell-runner.ts  system-agent-client.ts
system-agent/: Cargo.toml  test_agent.py
system-agent/src/: clipboard.rs  hotkeys.rs  main.rs  message.rs
(+4 files in other folders)
