[package]
name = "metakey-system-agent"
version = "0.1.0"
edition = "2021"
authors = ["Max Rivest", "Sota (Onetoken.ai)"]
description = "Native system agent for MetaKey AI - handles hotkeys and clipboard"
license = "GPL-2.0"

[dependencies]
global-hotkey = "0.4"
arboard = "3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.18", features = ["xlib", "xtest"] }

[[bin]]
name = "system-agent"
path = "src/main.rs" 