[package]
name = "system-agent"
version = "0.1.0"
edition = "2021"
authors = ["Max Rivest", "Sota (Onetoken.ai)"]
description = "Native system agent for MetaKey AI - handles hotkeys and clipboard"
license = "GPL-2.0"

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdev = "0.5"
arboard = "3.3"
crossbeam-channel = "0.5"
parking_lot = "0.12"

[[bin]]
name = "system-agent"
path = "src/main.rs" 